--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <script src="https://unpkg.com/esri-leaflet/dist/esri-leaflet.js"></script>
   </head>
   <body>
       <div id="app" class="container">
