--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
     <script src="https://unpkg.com/esri-leaflet/dist/esri-leaflet.js"></script>
+    <script src="https://linkeddata.github.io/rdflib.js/dist/rdflib.min.js"></script>
 
   </head>
   <body>
